--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: "postgres"
+  username: postgres
   password: "root"
 
 development:
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: TestingApp_production
-  username: TestingApp
-  password: <%= ENV["TESTINGAPP_DATABASE_PASSWORD"] %>
+  database: testingapp_production
+  username: postgres
+  password: "root"
